--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -50,3 +50,12 @@ eureka:
     registerWithEureka: false
     serviceUrl:
       defaultZone: http://localhost:8072/eureka/
+
+#Logging
+logging:
+  #  level:
+  #    org:
+  #      springframework:
+  #        security: TRACE
+  pattern:
+    level: "%5p [${spring.application.name},%X{trace_id},%X{span_id}]"
